# dotfilelink

./: .gitignore  README.md  dotfilelink.py  mypy.ini  pylintrc  pyproject.toml  requirements.txt  setup.py
docs/: ACTIONS.md
dotfilelink/: dotfilelink.py
