[project]
name = "dotfilelink"
version = "0.4.2"
description = "A tool for installing dotfiles"
authors = [{ name = "sndv", email = "sndv@mailbox.org" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "requests-cache>=1.2.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/sndv/dotfilelink"

[project.scripts]
dotfilelink = "dotfilelink.dotfilelink:main"

[tool.black]
line-length = 98
target-version = ["py310"]
preview = true
unstable = true

[tool.isort]
profile = "black"
