[project]
name = "dotfilelink"
version = "0.4.2"
description = "A tool for installing dotfiles"
authors = [{ name = "sndv", email = "sndv@mailbox.org" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "requests-cache>=1.2.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/sndv/dotfilelink"

[project.scripts]
dotfilelink = "dotfilelink.dotfilelink:main"

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]

[tool.ruff]
line-length = 98

[tool.ruff.format]
preview = true
quote-style = "double"
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]
